kubernetes/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-nodeport
  namespace: application
  labels:
    app: application-nodeport
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: http
  selector:
    app: application
